Show Google map and get user location

--- a/ltv_challenge/pubspec.yaml
+++ b/ltv_challenge/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   #To load a web page
   webviewx: ^0.2.1
 
+  google_maps_flutter: ^2.2.1
+  #To get the divice location info
+  geolocator: ^9.0.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
